@@ -1372,6 +1372,7 @@ _ipmi_oem_intelnm_get_node_manager_get_node_manager_capabilities_header (ipmi_oe
 		  policy_power_domain_str);
 }
 
+/* return 1 if output something, 0 if not, -1 on error */
 static int
 _ipmi_oem_intelnm_get_node_manager_capabilities_common (ipmi_oem_state_data_t *state_data,
 							uint8_t target_channel_number,
@@ -1475,7 +1476,7 @@ _ipmi_oem_intelnm_get_node_manager_capabilities_common (ipmi_oem_state_data_t *s
 	   || searching_policy_type
 	   || searching_policy_power_domain)
           && state_data->prog_data->args->verbose_count)
-        rv = 0;
+        rv = 1;
 
       goto cleanup;
     }
@@ -1703,7 +1704,7 @@ _ipmi_oem_intelnm_get_node_manager_capabilities_common (ipmi_oem_state_data_t *s
 		  "Limiting Source                 : %s\n",
 		  limiting_based_on_str);
 
-  rv = 0;
+  rv = 1;
  cleanup:
   fiid_obj_destroy (obj_cmd_rs);
   return (rv); 
@@ -1755,9 +1756,10 @@ ipmi_oem_intelnm_get_node_manager_capabilities (ipmi_oem_state_data_t *state_dat
   int policytype_specified = 0;
   int policypowerdomain_specified = 0;
   unsigned int i, j, k, l;
-  int first_output_flag = 0;
+  int output_newline_flag = 0;
   uint8_t node_manager_version;
   int rv = -1;
+  int ret;
 
   assert (state_data);
   
@@ -1975,24 +1977,27 @@ ipmi_oem_intelnm_get_node_manager_capabilities (ipmi_oem_state_data_t *state_dat
 	    {
 	      for (l = 0; l < policypowerdomain_array_len; l++)
 		{
-		  if (first_output_flag)
+		  if (output_newline_flag)
 		    pstdout_printf (state_data->pstate, "\n");
 
-		  if (_ipmi_oem_intelnm_get_node_manager_capabilities_common (state_data,
-									      target_channel_number,
-									      target_slave_address,
-									      target_lun,
-									      domainid_array[i],
-									      policytrigger_array[j],
-									      policytype_array[k],
-									      policypowerdomain_array[l],
-									      domainid_specified ? 0 : 1,
-									      policytrigger_specified ? 0 : 1,
-									      policytype_specified ? 0 : 1,
-									      policypowerdomain_specified ? 0 : 1) < 0)
+		  if ((ret = _ipmi_oem_intelnm_get_node_manager_capabilities_common (state_data,
+										     target_channel_number,
+										     target_slave_address,
+										     target_lun,
+										     domainid_array[i],
+										     policytrigger_array[j],
+										     policytype_array[k],
+										     policypowerdomain_array[l],
+										     domainid_specified ? 0 : 1,
+										     policytrigger_specified ? 0 : 1,
+										     policytype_specified ? 0 : 1,
+										     policypowerdomain_specified ? 0 : 1)) < 0)
 		    goto cleanup;
 
-		  first_output_flag++;
+		  if (ret > 0)
+		    output_newline_flag = 1;
+		  else
+		    output_newline_flag = 0;
 		}
 	    }
 	}
@@ -2183,6 +2188,7 @@ _ipmi_oem_intelnm_get_node_manager_policy_output_header (ipmi_oem_state_data_t *
 		  policy_id);
 }
 
+/* return 1 if output something, 0 if not, -1 on error */
 static int
 _ipmi_oem_intelnm_get_node_manager_policy_common (ipmi_oem_state_data_t *state_data,
 						  uint8_t target_channel_number,
@@ -2278,7 +2284,7 @@ _ipmi_oem_intelnm_get_node_manager_policy_common (ipmi_oem_state_data_t *state_d
       if ((searching_domain_id
 	   || searching_policy_id)
 	  && state_data->prog_data->args->verbose_count)
-	rv = 0; 
+	rv = 1; 
 
       goto cleanup;
     }
@@ -2628,7 +2634,7 @@ _ipmi_oem_intelnm_get_node_manager_policy_common (ipmi_oem_state_data_t *state_d
 		  "Statistics Reporting Period             : %u s\n",
 		  statistics_reporting_period);
 
-  rv = 0;
+  rv = 1;
  cleanup:
   fiid_obj_destroy (obj_cmd_rs);
   return (rv); 
@@ -2655,9 +2661,10 @@ ipmi_oem_intelnm_get_node_manager_policy (ipmi_oem_state_data_t *state_data)
   int domainid_specified = 0;
   int policyid_specified = 0;
   unsigned int i, j;
-  int first_output_flag = 0;
+  int output_newline_flag = 0;
   uint8_t node_manager_version;
   int rv = -1;
+  int ret;
 
   assert (state_data);
   
@@ -2758,20 +2765,23 @@ ipmi_oem_intelnm_get_node_manager_policy (ipmi_oem_state_data_t *state_data)
     {
       for (j = policyid_min; j <= policyid_max; j++)
 	{
-	  if (first_output_flag)
+	  if (output_newline_flag)
 	    pstdout_printf (state_data->pstate, "\n");
 
-	  if (_ipmi_oem_intelnm_get_node_manager_policy_common (state_data,
-								target_channel_number,
-								target_slave_address,
-								target_lun,
-								domainid_array[i],
-								j,
-								domainid_specified ? 0 : 1,
-								policyid_specified ? 0 : 1) < 0)
+	  if ((ret = _ipmi_oem_intelnm_get_node_manager_policy_common (state_data,
+								       target_channel_number,
+								       target_slave_address,
+								       target_lun,
+								       domainid_array[i],
+								       j,
+								       domainid_specified ? 0 : 1,
+								       policyid_specified ? 0 : 1)) < 0)
 	    goto cleanup;
 	  
-	  first_output_flag++;
+	  if (ret > 0)
+	    output_newline_flag = 1;
+	  else
+	    output_newline_flag = 0;
 	}
     }
 
@@ -3441,6 +3451,7 @@ _ipmi_oem_intelnm_get_node_manager_policy_alert_thresholds_output_header (ipmi_o
 		  policy_id);
 }
 
+/* return 1 if output something, 0 if not, -1 on error */
 static int
 _ipmi_oem_intelnm_get_node_manager_policy_alert_thresholds_common (ipmi_oem_state_data_t *state_data,
 								   uint8_t target_channel_number,
@@ -3522,7 +3533,7 @@ _ipmi_oem_intelnm_get_node_manager_policy_alert_thresholds_common (ipmi_oem_stat
       if ((searching_domain_id
 	   || searching_policy_id)
 	  && state_data->prog_data->args->verbose_count)
-	rv = 0; 
+	rv = 1; 
       
       goto cleanup;
     }
@@ -3647,7 +3658,7 @@ _ipmi_oem_intelnm_get_node_manager_policy_alert_thresholds_common (ipmi_oem_stat
 	  if ((searching_domain_id
 	       || searching_policy_id)
 	      && state_data->prog_data->args->verbose_count)
-	    rv = 0; 
+	    rv = 1; 
 	  
 	  goto cleanup;
         }
@@ -3713,7 +3724,7 @@ _ipmi_oem_intelnm_get_node_manager_policy_alert_thresholds_common (ipmi_oem_stat
     pstdout_printf (state_data->pstate,
 		    "Alert Threshold 3          : N/A\n");
 
-  rv = 0;
+  rv = 1;
  cleanup:
   fiid_obj_destroy (alert_threshold_obj_cmd_rs);
   fiid_obj_destroy (policy_obj_cmd_rs);
@@ -3741,9 +3752,10 @@ ipmi_oem_intelnm_get_node_manager_policy_alert_thresholds (ipmi_oem_state_data_t
   int domainid_specified = 0;
   int policyid_specified = 0;
   unsigned int i, j;
-  int first_output_flag = 0;
+  int output_newline_flag = 0;
   uint8_t node_manager_version;
   int rv = -1;
+  int ret;
 
   assert (state_data);
   
@@ -3843,20 +3855,23 @@ ipmi_oem_intelnm_get_node_manager_policy_alert_thresholds (ipmi_oem_state_data_t
     {
       for (j = policyid_min; j <= policyid_max; j++)
 	{
-	  if (first_output_flag)
+	  if (output_newline_flag)
 	    pstdout_printf (state_data->pstate, "\n");
 	  
-	  if (_ipmi_oem_intelnm_get_node_manager_policy_alert_thresholds_common (state_data,
-										 target_channel_number,
-										 target_slave_address,
-										 target_lun,
-										 domainid_array[i],
-										 j,
-										 domainid_specified ? 0 : 1,
-										 policyid_specified ? 0 : 1) < 0)
+	  if ((ret = _ipmi_oem_intelnm_get_node_manager_policy_alert_thresholds_common (state_data,
+											target_channel_number,
+											target_slave_address,
+											target_lun,
+											domainid_array[i],
+											j,
+											domainid_specified ? 0 : 1,
+											policyid_specified ? 0 : 1)) < 0)
 	    goto cleanup;
 	  
-	  first_output_flag++;
+	  if (ret > 0)
+	    output_newline_flag = 1;
+	  else
+	    output_newline_flag = 0;
 	}
     }
   
@@ -4048,6 +4063,7 @@ _ipmi_oem_intelnm_get_node_manager_policy_suspend_periods_output_header (ipmi_oe
 		  policy_id);
 }
 
+/* return 1 if output something, 0 if not, -1 on error */
 static int
 _ipmi_oem_intelnm_get_node_manager_policy_suspend_periods_common (ipmi_oem_state_data_t *state_data,
 								  uint8_t target_channel_number,
@@ -4133,7 +4149,7 @@ _ipmi_oem_intelnm_get_node_manager_policy_suspend_periods_common (ipmi_oem_state
       if ((searching_domain_id
 	   || searching_policy_id)
 	  && state_data->prog_data->args->verbose_count)
-	rv = 0; 
+	rv = 1; 
       
       goto cleanup;
     }
@@ -4429,7 +4445,7 @@ _ipmi_oem_intelnm_get_node_manager_policy_suspend_periods_common (ipmi_oem_state
 	}
     }
 
-  rv = 0;
+  rv = 1;
  cleanup:
   fiid_obj_destroy (obj_cmd_rs);
   return (rv); 
@@ -4456,9 +4472,10 @@ ipmi_oem_intelnm_get_node_manager_policy_suspend_periods (ipmi_oem_state_data_t 
   int domainid_specified = 0;
   int policyid_specified = 0;
   unsigned int i, j;
-  int first_output_flag = 0;
+  int output_newline_flag = 0;
   uint8_t node_manager_version;
   int rv = -1;
+  int ret;
 
   assert (state_data);
   
@@ -4560,20 +4577,23 @@ ipmi_oem_intelnm_get_node_manager_policy_suspend_periods (ipmi_oem_state_data_t 
     {
       for (j = policyid_min; j <= policyid_max; j++)
 	{
-	  if (first_output_flag)
+	  if (output_newline_flag)
 	    pstdout_printf (state_data->pstate, "\n");
 	  
-	  if (_ipmi_oem_intelnm_get_node_manager_policy_suspend_periods_common (state_data,
-										target_channel_number,
-										target_slave_address,
-										target_lun,
-										domainid_array[i],
-										j,
-										domainid_specified ? 0 : 1,
-										policyid_specified ? 0 : 1) < 0)
+	  if ((ret = _ipmi_oem_intelnm_get_node_manager_policy_suspend_periods_common (state_data,
+										       target_channel_number,
+										       target_slave_address,
+										       target_lun,
+										       domainid_array[i],
+										       j,
+										       domainid_specified ? 0 : 1,
+										       policyid_specified ? 0 : 1)) < 0)
 	    goto cleanup;
 	  
-	  first_output_flag++;
+	  if (ret > 0)
+	    output_newline_flag = 1;
+	  else
+	    output_newline_flag = 0;
 	}
     }
   
